--- a/R_Assignment/R_Lab_Assignment.Rmd
+++ b/R_Assignment/R_Lab_Assignment.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "DS311 - R Lab Assignment"
-author: "Your Name"
+author: "Kimsean Pen"
 date: "`r Sys.Date()`"
 output: 
   html_document:
@@ -35,10 +35,11 @@ a. Report the number of variables and observations in the data set.
 
 ```{r}
 # Enter your code here!
-
+number_variable = ncol(mtcars)
+number_observation = nrow(mtcars)
 
 # Answer:
-print("There are total of _____ variables and _____ observations in this data set.")
+print("There are total of 11 variables and 32 observations in this data set.")
 ```
 
 
@@ -48,9 +49,29 @@ b. Print the summary statistics of the data set and report how many discrete and
 ```{r}
 # Enter your code here!
 
+summary(mtcars)
+
+max_threshold = 0.1
+discrete_number = 0
+continuous_number = 0
+
+for (number_variable in colnames(mtcars)) {
+  number_observation = mtcars[[number_variable]]
+  
+  if (is.numeric(number_observation)) {
+    number = length(unique(number_observation)) / length(number_observation)
+    if (number < max_threshold) {
+      discrete_number = discrete_number + 1
+    } else {
+      continuous_number = continuous_number + 1
+    }
+  } else {
+    discrete_number = discrete_number + 1
+  }
+}
 
 # Answer:
-print("There are _____ discrete variables and _____ continuous variables in this data set.")
+print("There are 4 discrete variables and 7 continuous variables in this data set.")
 ```
 
 
@@ -60,10 +81,13 @@ c. Calculate the mean, variance, and standard deviation for the variable **mpg**
 ```{r}
 # Enter your code here!
 
+m = mean(mtcars$mpg)
+v= var(mtcars$mpg)
+s = sd(mtcars$mpg)
 
 
 
-# print(paste("The average of Mile Per Gallon from this data set is ",  , " with variance ",  , " and standard deviation",  , "."))
+print(paste("The average of Mile Per Gallon from this data set is ", m , " with variance ", v , " and standard deviation", s , "."))
 ```
 
 
@@ -73,7 +97,25 @@ d. Create two tables to summarize 1) average mpg for each cylinder class and 2) 
 ```{r}
 # Enter your code here!
 
+avg_mpg_per_cylinder = tapply(mtcars$mpg, mtcars$cyl, mean)
 
+sd_mpg_per_gear = tapply(mtcars$mpg, mtcars$gear, sd)
+
+print(avg_mpg_per_cylinder)
+print(sd_mpg_per_gear)
+
+avg_mpg_per_cylinder_df = data.frame(
+  Cylinder = as.integer(names(avg_mpg_per_cylinder)),
+  Average_mpg = as.vector(avg_mpg_per_cylinder)
+)
+
+sd_mpg_per_gear_df = data.frame(
+  Gear = as.integer(names(sd_mpg_per_gear)),
+  SD_mpg = as.vector(sd_mpg_per_gear)
+)
+
+print(avg_mpg_per_cylinder_df)
+print(sd_mpg_per_gear_df)
 
 
 ```
@@ -85,8 +127,21 @@ e. Create a crosstab that shows the number of observations belong to each cylind
 ```{r}
 # Enter your code here!
 
+crosstab = table(mtcars$cyl, mtcars$gear)
 
-print("The most common car type in this data set is car with ____ cylinders and ____ gears. There are total of _____ cars belong to this specification in the data set.")
+print (crosstab)
+
+
+crosstab_df = as.data.frame(crosstab)
+
+crosstab_df = setNames(crosstab_df, c("Cylinder", "Gear", "Frequency"))
+
+print(crosstab_df)
+
+
+
+
+print("The most common car type in this data set is car with 8 cylinders and 3 gears. There are total of 9 cars belong to this specification in the data set.")
 ```
 
 
@@ -99,6 +154,8 @@ Use different visualization tools to summarize the data sets in this question.
 a. Using the **PlantGrowth** data set, visualize and compare the weight of the plant in the three separated group. Give labels to the title, x-axis, and y-axis on the graph. Write a paragraph to summarize your findings.
 
 ```{r}
+library(ggplot2)
+
 # Load the data set
 data("PlantGrowth")
 
@@ -107,12 +164,26 @@ head(PlantGrowth)
 
 # Enter your code here!
 
+library(ggplot2)
+
+data("PlantGrowth")
+
+data_graph = ggplot(PlantGrowth, aes(x = group, y = weight, fill = group)) +
+  stat_summary(fun = mean, geom = "bar", width = 0.5) +
+  labs(
+    title = "Average Plant Weight by Different Treatment Group",
+    x = "Group",
+    y = "Average Weight (grams)"
+  ) +
+  theme_minimal()
+
+print(data_graph)
 
 ```
 
 Result:
 
-=> Report a paragraph to summarize your findings from the plot!
+The chart above displays a comparison between the average weight of platns in three groups: Control, Treatment 1 and Treatment 2. It is evident that on average, plants recieiving treatment 1 exhibit lower weight in comparison to the control group. In contrast, plants in treatment 2 demonstrate an increase in average weight, suggesting that treatment two is more effective in increase weight of the plant or overall plant growth. As treatment one results in a decreased weight, it appears to be less effective an may not be the optimal treatment for plant growth. 
 
 
 
@@ -120,9 +191,16 @@ b. Using the **mtcars** data set, plot the histogram for the column **mpg** with
 
 ```{r}
 
+hist(mtcars$mpg, breaks = 10, col = "green", border = "black",
+     main = "Miles per Gallon vs Frequency",
+     xlab = "Miles per Gallon (mpg)",
+     ylab = "Amount of Cars")
 
+# Determine the most observed mpg class using hist() function
+mpg_hist = hist(mtcars$mpg, breaks = 10, plot = FALSE)
+most_observed_mpg_class = mpg_hist$mids[which.max(mpg_hist$counts)]
 
-print("Most of the cars in this data set are in the class of ______ mile per gallon.")
+print("Most of the cars in this data set are in the class of 15 mile per gallon.")
 ```
 
 
@@ -138,12 +216,24 @@ head(USArrests)
 
 # Enter your code here!
 
+pairs(USArrests, main = "Pairs Plot of US Arrests")
+
+plot(USArrests$Murder, USArrests$Assault,
+     main = " Murder vs. Assault",
+     xlab = "Murder Rate",
+     ylab = "Assault Rate",
+     col = "red")
+
+
+
+
+
 
 ```
 
 Result:
+In the scatter plot, we observe a strong positive correlation between murder and assulat rates. This indicates that as the rate of assault increase, there is a corresponding increase in the rate of murders. This relationship suggestion that in areas with high assult rates, there is a high possibility that the murder rate are also high. The pairs plot provides critical information into the relationship between various variables such as rape, urban pop, murder, and assault. Murder and assault rates exhibit a positive correlation which reinforce findings from the scatter plot, however in contrast to urban popoulation, there are little correlation indication that murder rates is not a strong association with the size of the population. The variable of murder and rape shows a postie correlation suggesting that there is a similar trends between those types of violent crimes. Assault and rape have a positive correlation while assault and urban population have little relationship. But when looking at Urban population relationship with rape, there is a positive correlation, indicating that in area of high population, reported rape incidents are also high. 
 
-=> Report a paragraph to summarize your findings from the plot!
 
 
 
@@ -170,8 +260,32 @@ a. Create your own descriptive statistics and aggregation tables to summarize th
 ```{r}
 # Head of the cleaned data set
 head(housingData)
+str(housingData)
+summary(housingData)
 
+amount_of_boros = unique(housingData)
+num_unique_boros = length(amount_of_boros)
+print(num_unique_boros)
 # Enter your code here!
+
+#average square foot over the years built 
+average_sqft_by_year = aggregate(Market.Value.per.SqFt ~ Year.Built, data = housingData, FUN = mean)
+colnames(average_sqft_by_year) = c("Year_Built", "Total_SqFt")
+print(average_sqft_by_year)
+
+
+
+#count of house built over the last 20 years 
+house_count_by_year = as.data.frame(table(housingData$Year.Built))
+colnames(house_count_by_year) = c("Year_Built", "Num_Houses")
+house_count_by_year$Year_Built = as.numeric(as.character(house_count_by_year$Year_Built))
+
+current_years = max(house_count_by_year$Year_Built)
+past_20years = house_count_by_year[house_count_by_year$Year_Built >= current_years -19,]
+print(past_20years)
+
+
+
 
 
 ```
@@ -180,12 +294,52 @@ b. Create multiple plots to demonstrates the correlations between different vari
 
 ```{r}
 # Enter your code here!
+library(ggplot2)
+
+#bar graph to visualize the number of square foot over the years
+bar_plot_average_sqft_by_year = ggplot(average_sqft_by_year, aes(x = Year_Built, y = Total_SqFt)) +
+  geom_bar(stat = "identity", fill = "blue") +
+  labs(title = "Average Square Footage by Year",
+       x = "Year Built",
+       y = "Average Square Footage") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 360, hjust = 0.5))
+
+print(bar_plot_average_sqft_by_year)
+
+
+
+# bar plot to visualize the number of houses built per year
+house_count_by_year_graph = ggplot(house_count_by_year, aes(x = Year_Built, y = Num_Houses)) +
+  geom_bar(stat = "identity") +
+  labs(title = "Number of Houses Built by Year",
+       x = "Year Built",
+       y = "Number of Houses") +
+  theme_light() +
+  theme(axis.text.x = element_text(angle = 360, hjust = 0.5))
+
+print(house_count_by_year_graph)
+
+
+#scatter plot to visualize the correlation between houses built over the last 20 years 
+
+past_20years_scatter = ggplot(past_20years, aes(x = Year_Built, y = Num_Houses)) +
+  geom_point() +
+  labs(title = "Number of Houses Built by Year (Last 20 Years)",
+       x = "Year Built",
+       y = "Number of Houses") +
+  theme_classic()
+
+print(past_20years_scatter)
+
+
+
+
 
 
 ```
 
 c. Write a summary about your findings from this exercise.
 
-=> Enter your answer here!
-
+The provided graph indicates that the year 2005 experienced a peak rate of housing construction and after there's a gradual decline from 2005 to 2010. Additionally there seems to be a decrease in construction rate after the year 2000 as observed by the increasing spacing between data points on the scatter plot. Looking at average square foot, most houses that were built had an average size of less than 200 square foot. Notably during the 1980s, houses had one of the largest average square foot before falling back down to under 200 sqft. 
 
